--- a/etc/reflector.conf
+++ b/etc/reflector.conf
@@ -1,3 +1,6 @@
+# 
+# /etc/xdg/reflector/reflector.conf
+#
 # Reflector configuration file for the systemd service.
 #
 # Empty lines and lines beginning with "#" are ignored.  All other lines should
